--- a/index.html
+++ b/index.html
@@ -235,5 +235,7 @@
 
   <script src="js/util.js"></script>
   <script src="js/ajax.js"></script>
+  <script src="js/picture.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
