--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
   <script src="js/util.js"></script>
   <script src="js/ajax.js"></script>
   <script src="js/picture.js"></script>
+
   <script src="js/social.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/filter.js"></script>
 </body>
 </html>
