--- a/index.html
+++ b/index.html
@@ -235,10 +235,9 @@
 
   <script src="js/util.js"></script>
   <script src="js/ajax.js"></script>
-  <script src="js/picture.js"></script>
-
   <script src="js/social.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/big-picture.js"></script>
+  <script src="js/picture.js"></script>
   <script src="js/filter.js"></script>
 </body>
 </html>
