--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
 
   <script src="js/util.js"></script>
   <script src="js/ajax.js"></script>
+  <script src="js/editor.js"></script>
+  <script src="js/scale.js"></script>
   <script src="js/social.js"></script>
   <script src="js/big-picture.js"></script>
   <script src="js/picture.js"></script>
