Добавляет показ пользовательской картинки

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
   </template>
 
   <script src="js/util.js"></script>
+  <script src="js/file.js"></script>
   <script src="js/message.js"></script>
   <script src="js/drag-n-drop.js"></script>
   <script src="js/ajax.js"></script>
